keep improving makefile

--- a/documentation/paper.tex
+++ b/documentation/paper.tex
@@ -36,7 +36,7 @@
 \begin{document}
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{Exploring the design space of back end services: \\ Or how to lose your sanity with C}
+\title{Exploring the design space of back-end services: \\ Or how to lose your mental sanity with C}
 
 \author{\IEEEauthorblockN{Eduardo Rodriguez Fernandez}\\
 \IEEEauthorblockA{Chair for Data Processing, Technical University of Munich}\\
@@ -50,11 +50,11 @@
 \input{chapters/abstract}
 % Note that keywords are not normally used for peerreview papers.
 \begin{IEEEkeywords}
-C, Networking, Back-end services, Databases, Software architecture, Systems programming, Software engineering principles.
+Back-end services, C, Databases, Software architecture, Systems programming, Software engineering, Design principles
 \end{IEEEkeywords}
 \input{chapters/introduction}
-\input{chapters/conclusion}
-\input{chapters/appendix}
+%\input{chapters/conclusion}
+%\input{chapters/appendix}
 
 \bibliographystyle{IEEEtran}
 \bibliography{other/bibliography}
