fix bibliography, add to intro

--- a/documentation/other/bibliography.bib
+++ b/documentation/other/bibliography.bib
@@ -22,3 +22,12 @@
 	address = {San Francisco},
 	year = {2020}
 }
+
+@MISC{Kennedy2018,
+	author = {William Kennedy},
+	title = {Scheduling in Go},
+	month = {August},
+	year = {2018},
+	howpublished = {\url{https://www.ardanlabs.com/blog/2018/08/scheduling-in-go-part2.html}}
+
+}
