--- a/documentation/paper.tex
+++ b/documentation/paper.tex
@@ -50,10 +50,10 @@
 \input{chapters/abstract}
 % Note that keywords are not normally used for peerreview papers.
 \begin{IEEEkeywords}
-Back-end services, C, Databases, Software architecture, Systems programming, Software engineering, Design principles
+back-end services, concurrency, C, databases, software architecture, systems programming, software engineering, design principles
 \end{IEEEkeywords}
 \input{chapters/introduction}
-%\input{chapters/conclusion}
+\input{chapters/conclusion}
 %\input{chapters/appendix}
 
 \bibliographystyle{IEEEtran}
