update intro and abstract of paper

--- a/documentation/other/bibliography.bib
+++ b/documentation/other/bibliography.bib
@@ -1,3 +1,20 @@
+@book{Cox-Buday2017,
+	author = {Cox-Buday, Katherine},
+	title = {Concurrency in Go},
+	publisher = {O'Reilly},
+	address = {Sebastopol, California},
+	month = {August},
+	year = {2017}
+}
+
+@MISC{Kennedy2018,
+	author = {William Kennedy},
+	title = {Scheduling in {Go}},
+	month = {August},
+	year = {2018},
+	howpublished = {\url{https://www.ardanlabs.com/blog/2018/08/scheduling-in-go-part2.html}}
+}
+
 @book{Kerrisk2010,
 	author = {Kerrisk, Michael},
 	title = {The Linux Programming Interface},
@@ -10,7 +27,7 @@
 	author = {Kleppmann, Martin},
 	title = {Designing Data-Intensive Applications},
 	publisher = {O'Reilly},
-	address = {San Francisco},
+	address = {Sebastopol, California},
 	year = {2017},
 	month = {March}
 }
@@ -21,13 +38,4 @@
 	publisher = {No Starch Press},
 	address = {San Francisco},
 	year = {2020}
-}
-
-@MISC{Kennedy2018,
-	author = {William Kennedy},
-	title = {Scheduling in Go},
-	month = {August},
-	year = {2018},
-	howpublished = {\url{https://www.ardanlabs.com/blog/2018/08/scheduling-in-go-part2.html}}
-
 }
