--- a/documentation/paper.tex
+++ b/documentation/paper.tex
@@ -60,9 +60,8 @@ back-end services, concurrency, C, databases, software architecture, systems pro
 \bibliography{other/bibliography}
 \nocite{*}
 
-\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{img/picture}}]{Eduardo Rodriguez}
-%\blindtext[1]
-is an Electrical Engineering and IT graduate student at TUM.
-\end{IEEEbiography}
+%\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{img/picture}}]{Eduardo Rodriguez}
+%is an Electrical Engineering and IT graduate student at TUM.
+%\end{IEEEbiography}
 
 \end{document}
