subdivide into introduction and soa

--- a/documentation/paper.tex
+++ b/documentation/paper.tex
@@ -53,6 +53,7 @@
 back-end services, concurrency, C, databases, software architecture, systems programming, software engineering, design principles
 \end{IEEEkeywords}
 \input{chapters/introduction}
+\input{chapters/soa}
 \input{chapters/conclusion}
 %\input{chapters/appendix}
 
