work on introduction

--- a/documentation/paper.tex
+++ b/documentation/paper.tex
@@ -36,7 +36,8 @@
 \begin{document}
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{Exploring the design space of back-end services: \\ Or how to lose your mental sanity with C}
+\title{Exploring the design space \\of self-made back-end services}
+%\title{Exploring the design space of self-made back-end services: \\ Or how to lose your mental sanity with C}
 
 \author{\IEEEauthorblockN{Eduardo Rodriguez Fernandez}\\
 \IEEEauthorblockA{Chair for Data Processing, Technical University of Munich}\\
