improve introduction, add more sources

--- a/documentation/other/bibliography.bib
+++ b/documentation/other/bibliography.bib
@@ -7,6 +7,30 @@
 	year = {2017}
 }
 
+@MISC{Edge2016,
+	author = {Jack Edge},
+	title = {The perils of federated protocols},
+	month = {May},
+	year = {2016},
+	howpublished = {\url{https://lwn.net/Articles/687294/}}
+}
+
+@MISC{Kaufman2016,
+	author = {Brett Max Kaufman},
+	title = {New documents reveal government effort to impose secrecy on encryption company},
+	month = {October},
+	year = {2016},
+	howpublished = {\url{https://www.aclu.org/blog/national-security/secrecy/new-documents-reveal-government-effort-impose-secrecy-encryption}}
+}
+
+@book{GoPL2015,
+	author = {Alan A.A. Donovan and Brian W. Kernighan},
+	title = {The Go Programming Language},
+	publisher = {Addison-Wesley},
+	month = {October},
+	year = {2015}
+}
+
 @MISC{Kennedy2018,
 	author = {William Kennedy},
 	title = {Scheduling in {Go}},
@@ -30,6 +54,14 @@
 	address = {Sebastopol, California},
 	year = {2017},
 	month = {March}
+}
+
+@MISC{Kumar2021,
+	author = {Rohan Kumar},
+	title = {{WhatsApp} and the domestication of users},
+	month = {January},
+	year = {2021},
+	howpublished = {\url{https://seirdy.one/2021/01/27/whatsapp-and-the-domestication-of-users.html}}
 }
 
 @book{Seacord2020,
