almost finish intro

--- a/documentation/other/bibliography.bib
+++ b/documentation/other/bibliography.bib
@@ -31,6 +31,14 @@
 	year = {2015}
 }
 
+@MISC{Hodgson2020,
+	author = {Matthew Hodgson},
+	title = {On privacy versus freedom},
+	month = {January},
+	year = {2020},
+	howpublished = {\url{https://matrix.org/blog/2020/01/02/on-privacy-versus-freedom}}
+}
+
 @MISC{Kennedy2018,
 	author = {William Kennedy},
 	title = {Scheduling in {Go}},
@@ -62,6 +70,13 @@
 	month = {January},
 	year = {2021},
 	howpublished = {\url{https://seirdy.one/2021/01/27/whatsapp-and-the-domestication-of-users.html}}
+}
+
+@MISC{Rodriguez2022,
+	author = {Eduardo {Rodriguez Fernandez}},
+	title = {{papayaChat}: a self-hosted {CLI} chat service for the cloud written in {C}},
+	year = {2022},
+	howpublished = {\url{https://github.com/erodrigufer/papayaChat}}
 }
 
 @book{Seacord2020,
