working on state of the art chapter

--- a/documentation/other/bibliography.bib
+++ b/documentation/other/bibliography.bib
@@ -72,6 +72,13 @@
 	howpublished = {\url{https://seirdy.one/2021/01/27/whatsapp-and-the-domestication-of-users.html}}
 }
 
+@MISC{Pike2012,
+	author = {Rob Pike},
+	title = {Go at {Google}: {Language} design in the service of {Software Engineering}},
+	year = {2012},
+	howpublished = {\url{https://talks.golang.org/2012/splash.article}}
+}
+
 @MISC{Rodriguez2022,
 	author = {Eduardo {Rodriguez Fernandez}},
 	title = {{papayaChat}: a self-hosted {CLI} chat service for the cloud written in {C}},
