add bib. references for go runtime scheduler

--- a/documentation/other/bibliography.bib
+++ b/documentation/other/bibliography.bib
@@ -72,6 +72,31 @@
 	howpublished = {\url{https://seirdy.one/2021/01/27/whatsapp-and-the-domestication-of-users.html}}
 }
 
+@MISC{Morsing2013,
+	author = {Daniel Morsing},
+	title = {The {Go} scheduler},
+	month = {June},
+	year = {2013},
+	howpublished = {\url{https://morsmachine.dk/go-scheduler}}
+}
+
+@MISC{Morsing2013_2,
+	author = {Daniel Morsing},
+	title = {The {Go} netpoller},
+	month = {September},
+	year = {2013},
+	howpublished = {\url{https://morsmachine.dk/netpoller}}
+}
+
+
+@MISC{Siebenmann2019,
+	author = {Chris Siebenmann},
+	title = {The {Go}  runtime scheduler's clever way of dealing with system calls},
+	month = {December},
+	year = {2019},
+	howpublished = {\url{https://utcc.utoronto.ca/~cks/space/blog/programming/GoSchedulerAndSyscalls}}
+}
+
 @MISC{Pike2012,
 	author = {Rob Pike},
 	title = {Go at {Google}: {Language} design in the service of {Software Engineering}},
