add references, keep working on sota

--- a/documentation/other/bibliography.bib
+++ b/documentation/other/bibliography.bib
@@ -31,6 +31,18 @@
 	year = {2015}
 }
 
+@MISC{GoNet,
+	title = {Go's standard library's net package. {Listener type}},
+	year = {go1.17.8},
+	howpublished = {\url{https://pkg.go.dev/net#Listener}}
+}
+
+@MISC{GoHTTP,
+	title = {Go's standard library's net/http package. {Serve() function}},
+	year = {go1.17.8},
+	howpublished = {\url{https://pkg.go.dev/net/http#Serve}}
+}
+
 @MISC{Hodgson2020,
 	author = {Matthew Hodgson},
 	title = {On privacy versus freedom},
