--- a/documentation/paper.tex
+++ b/documentation/paper.tex
@@ -51,7 +51,7 @@
 \input{chapters/abstract}
 % Note that keywords are not normally used for peerreview papers.
 \begin{IEEEkeywords}
-back-end services, concurrency, C, databases, software architecture, systems programming, software engineering, design principles
+back-end services, concurrency, C, Go, databases, software architecture, systems programming, software engineering, design principles
 \end{IEEEkeywords}
 \input{chapters/introduction}
 \input{chapters/soa}
