working on implementation

--- a/documentation/other/bibliography.bib
+++ b/documentation/other/bibliography.bib
@@ -53,10 +53,10 @@
 
 @MISC{Kennedy2018,
 	author = {William Kennedy},
-	title = {Scheduling in {Go}},
+	title = {Scheduling in {Go}: {OS} Scheduler},
 	month = {August},
 	year = {2018},
-	howpublished = {\url{https://www.ardanlabs.com/blog/2018/08/scheduling-in-go-part2.html}}
+	howpublished = {\url{https://www.ardanlabs.com/blog/2018/08/scheduling-in-go-part1.html}}
 }
 
 @book{Kerrisk2010,
