add one more source m. kerrisk

--- a/documentation/other/bibliography.bib
+++ b/documentation/other/bibliography.bib
@@ -67,6 +67,14 @@
 	year = {2010}
 }
 
+@MISC{Kerrisk2021,
+	author = {Kerrisk, Michael},
+	title = {Docker unplugged},
+	howpublished = {Training material},
+	year = {2021},
+	month = {October}
+}
+
 @book{Kleppmann2017,
 	author = {Kleppmann, Martin},
 	title = {Designing Data-Intensive Applications},
