add citation about botnets

--- a/documentation/other/bibliography.bib
+++ b/documentation/other/bibliography.bib
@@ -75,6 +75,24 @@
 	month = {October}
 }
 
+@article{Mirkovic2004,
+	author = {Mirkovic, Jelena and Reiher, Peter},
+	title = {A Taxonomy of {DDoS} Attack and {DDoS} Defense Mechanisms},
+	year = {2004},
+	issue_date = {April 2004},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	volume = {34},
+	number = {2},
+	issn = {0146-4833},
+	url = {https://doi.org/10.1145/997150.997156},
+	doi = {10.1145/997150.997156},
+	journal = {SIGCOMM Comput. Commun. Rev.},
+	month = {Apr.},
+	pages = {39–53},
+	numpages = {15}
+}
+
 @book{Kleppmann2017,
 	author = {Kleppmann, Martin},
 	title = {Designing Data-Intensive Applications},
