finish file locking

--- a/documentation/other/bibliography.bib
+++ b/documentation/other/bibliography.bib
@@ -118,6 +118,12 @@
 	howpublished = {\url{https://morsmachine.dk/go-scheduler}}
 }
 
+@MISC{Graham,
+	author = {Robert David Graham},
+	title = {{MASSCAN}: {Mass} {IP} port scanner},
+	howpublished = {\url{https://github.com/robertdavidgraham/masscan}}
+}
+
 @MISC{Morsing2013_2,
 	author = {Daniel Morsing},
 	title = {The {Go} netpoller},
