--- a/academicArticle/other/bibliography.bib
+++ b/academicArticle/other/bibliography.bib
@@ -141,11 +141,22 @@
 	howpublished = {\url{https://utcc.utoronto.ca/~cks/space/blog/programming/GoSchedulerAndSyscalls}}
 }
 
-@MISC{Pike2012,
-	author = {Rob Pike},
-	title = {Go at {Google}: {Language} design in the service of {Software Engineering}},
+@inproceedings{Pike2012,
+	author = {Pike, Rob},
+	title = {Go at {Google}},
 	year = {2012},
-	howpublished = {\url{https://talks.golang.org/2012/splash.article}}
+	isbn = {9781450315630},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/2384716.2384720},
+	doi = {10.1145/2384716.2384720},
+	abstract = {The Go programming language was conceived in late 2007 as an answer to some of the problems we were seeing developing software infrastructure at Google. The computing landscape today is almost unrelated to the environment in which the languages being used, mostly C++, Java, and Python, had been created. The problems introduced by multicore processors, networked systems, massive computation clusters, and the web programming model were being worked around rather than addressed head-on. Moreover, the scale has changed: today's server programs comprise tens of millions of lines of code, are worked on by hundreds or even thousands of programmers, and are updated literally every day. To make matters worse, build times, even on large compilation clusters, have stretched to many minutes, even hours.Go was designed and developed to make working in this environment more productive. Besides its better-known aspects such as built-in concurrency and garbage collection, Go's design considerations include rigorous dependency management, the adaptability of software architecture as systems grow, and robustness across the boundaries between components.This talk will explain how these issues were addressed while building an efficient, compiled programming language that feels lightweight and pleasant. Examples and explanations will be taken from the real-world problems faced at Google.},
+	booktitle = {Proceedings of the 3rd Annual Conference on Systems, Programming, and Applications: Software for Humanity},
+	pages = {5–6},
+	numpages = {2},
+	keywords = {programming in the large, composition, go, concurrency},
+	location = {Tucson, Arizona, USA},
+	series = {SPLASH '12}
 }
 
 @MISC{Rodriguez2022,
