add reference Ajmani 2016

--- a/academicArticle/other/bibliography.bib
+++ b/academicArticle/other/bibliography.bib
@@ -173,3 +173,18 @@
 	address = {San Francisco},
 	year = {2020}
 }
+
+@inproceedings{Ajmani2016,
+	author = {Ajmani, Sameer},
+	title = {Program {Your} next {Server} in {Go}},
+	year = {2016},
+	isbn = {9781450344647},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/2959689.2960078},
+	doi = {10.1145/2959689.2960078},
+	abstract = {Go is a new general-purpose programming language for professionals who build and maintain production systems. Hundreds of companies and thousands of open-source projects are using Go, including Google, DropBox, Docker, Apcera, and SoundCloud. This talk will present Go to the experienced service developer and show how its radically simple approach to software construction can make teams more productive.},
+	booktitle = {Applicative 2016},
+	location = {New York, NY, USA},
+	series = {Applicative 2016}
+}
