add more references from ACM

--- a/academicArticle/other/bibliography.bib
+++ b/academicArticle/other/bibliography.bib
@@ -188,3 +188,41 @@
 	location = {New York, NY, USA},
 	series = {Applicative 2016}
 }
+
+@article{2012PoulHenning,
+	author = {Kamp, Poul-Henning},
+	title = {A {Generation Lost in the Bazaar}: {Quality} happens only when someone is responsible for it.},
+	year = {2012},
+	issue_date = {August 2012},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	volume = {10},
+	number = {8},
+	issn = {1542-7730},
+	url = {https://doi.org/10.1145/2346916.2349257},
+	doi = {10.1145/2346916.2349257},
+	abstract = {Thirteen years ago, Eric Raymond’s book "The Cathedral and the Bazaar" (O’Reilly Media, 2001) redefined our vocabulary and all but promised an end to the waterfall model and big software companies, thanks to the new grass-roots open source software development movement. I found the book thought provoking, but it did not convince me. On the other hand, being deeply involved in open source, I couldn’t help but think that it would be nice if he was right.},
+	journal = {ACM Queue},
+	month = {aug},
+	pages = {20–23},
+	numpages = {4}
+}
+
+@article{GoArticleACM,
+	author = {Cox, Russ and Griesemer, Robert and Pike, Rob and Taylor, Ian Lance and Thompson, Ken},
+	title = {The {Go} Programming Language and Environment},
+	year = {2022},
+	issue_date = {May 2022},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	volume = {65},
+	number = {5},
+	issn = {0001-0782},
+	url = {https://doi.org/10.1145/3488716},
+	doi = {10.1145/3488716},
+	abstract = {Released as open source in November 2009, Go has become the foundation for critical infrastructure at every major cloud provider. Its creators look back on how Go got here and why it has stuck around.},
+	journal = {Commun. ACM},
+	month = {apr},
+	pages = {70–78},
+	numpages = {9}
+}
