add source for social media, add more tags to article

--- a/academicArticle/other/bibliography.bib
+++ b/academicArticle/other/bibliography.bib
@@ -226,3 +226,21 @@
 	pages = {70–78},
 	numpages = {9}
 }
+
+@inproceedings{socialmedia2017,
+	author = {Choudhery, Deepankar and Leung, Carson K.},
+	title = {Social Media Mining: Prediction of Box Office Revenue},
+	year = {2017},
+	isbn = {9781450352208},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/3105831.3105854},
+	doi = {10.1145/3105831.3105854},
+	abstract = {In recent years, social media has played a huge role in how we share and communicate our thoughts and opinions. This information can very valuable for companies and governments as it can be used to analyze public mood and opinion which is a very powerful tool. In this paper, we present a system that mines social media content from a platform such as Twitter for predicting future outcomes. Specifically, it uses chatter from Twitter to predict box office revenue of movies by extracting features such as tweets and their sentiments. Then, by using these features, our system constructs a polynomial regression model for predicting box office revenue. Experimental results show the effectiveness of our system in mining social media and predicting box office revenue.},
+	booktitle = {Proceedings of the 21st International Database Engineering; Applications Symposium},
+	pages = {20–29},
+	numpages = {10},
+	keywords = {social media data, Twitter, tweets, Data mining, prediction, social networking sites, box office, movies},
+	location = {Bristol, United Kingdom},
+	series = {IDEAS 2017}
+}
