--- a/academicArticle/paper.tex
+++ b/academicArticle/paper.tex
@@ -51,7 +51,7 @@
 \input{chapters/abstract}
 % Note that keywords are not normally used for peerreview papers.
 \begin{IEEEkeywords}
-back-end services, concurrency, C, Go, databases, software architecture, systems programming, software engineering, design principles
+backend development, concurrency, C, Go, databases, software architecture, systems programming, instant messaging, software engineering
 \end{IEEEkeywords}
 \input{chapters/introduction}
 \input{chapters/soa}
