fix bibliography formatting

--- a/academicArticle/other/bibliography.bib
+++ b/academicArticle/other/bibliography.bib
@@ -33,13 +33,13 @@
 
 @MISC{GoNet,
 	title = {Go's standard library's net package. {Listener type}},
-	year = {go1.17.8},
+	year = {go1.18.3},
 	howpublished = {\url{https://pkg.go.dev/net#Listener}}
 }
 
 @MISC{GoHTTP,
 	title = {Go's standard library's net/http package. {Serve() function}},
-	year = {go1.17.8},
+	year = {go1.18.3},
 	howpublished = {\url{https://pkg.go.dev/net/http#Serve}}
 }
 
@@ -203,7 +203,7 @@
 	doi = {10.1145/2346916.2349257},
 	abstract = {Thirteen years ago, Eric Raymond’s book "The Cathedral and the Bazaar" (O’Reilly Media, 2001) redefined our vocabulary and all but promised an end to the waterfall model and big software companies, thanks to the new grass-roots open source software development movement. I found the book thought provoking, but it did not convince me. On the other hand, being deeply involved in open source, I couldn’t help but think that it would be nice if he was right.},
 	journal = {ACM Queue},
-	month = {aug},
+	month = {August},
 	pages = {20–23},
 	numpages = {4}
 }
@@ -221,8 +221,8 @@
 	url = {https://doi.org/10.1145/3488716},
 	doi = {10.1145/3488716},
 	abstract = {Released as open source in November 2009, Go has become the foundation for critical infrastructure at every major cloud provider. Its creators look back on how Go got here and why it has stuck around.},
-	journal = {Commun. ACM},
-	month = {apr},
+	journal = {Communications of the ACM},
+	month = {April},
 	pages = {70–78},
 	numpages = {9}
 }
