--- a/academicArticle/paper.tex
+++ b/academicArticle/paper.tex
@@ -36,7 +36,7 @@
 \begin{document}
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{Exploring the low level design space \\of back-end services}
+\title{Exploring the low level design space \\of backend services}
 %\title{Exploring the design space of self-made back-end services: \\ Or how to lose your mental sanity with C}
 
 \author{\IEEEauthorblockN{Eduardo Rodriguez Fernandez}\\
