change title, change abstract, add experiments chapter

--- a/academicArticle/paper.tex
+++ b/academicArticle/paper.tex
@@ -36,7 +36,8 @@
 \begin{document}
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{Exploring the low level design space \\of backend services}
+\title{An experimental comparison of the performance \\of different web concurrency paradigms}
+%\title{Exploring the low level design space \\of backend services}
 %\title{Exploring the design space of self-made back-end services: \\ Or how to lose your mental sanity with C}
 
 \author{\IEEEauthorblockN{Eduardo Rodriguez Fernandez}\\
@@ -57,6 +58,7 @@ backend development, concurrency, C, Go, databases, software architecture, syste
 \input{chapters/soa}
 \input{chapters/ps}
 \input{chapters/methodology}
+\input{chapters/experiments}
 \input{chapters/conclusion}
 %\input{chapters/appendix}
 
