improve intro, start working on soa, fix one reference

--- a/academicArticle/other/bibliography.bib
+++ b/academicArticle/other/bibliography.bib
@@ -162,7 +162,7 @@
 
 @inproceedings{Ajmani2016,
 	author = {Ajmani, Sameer},
-	title = {Program {Your} next {Server} in {Go}},
+	title = {Program your next server in {Go}},
 	year = {2016},
 	isbn = {9781450344647},
 	publisher = {Association for Computing Machinery},
