create a discussion section, rephrase log file to only file

--- a/academicArticle/paper.tex
+++ b/academicArticle/paper.tex
@@ -59,6 +59,7 @@ concurrency, backend development, Go, C, software architecture, systems programm
 \input{chapters/ps}
 \input{chapters/methodology}
 \input{chapters/experiments}
+\input{chapters/discussion}
 \input{chapters/conclusion}
 %\input{chapters/appendix}
 
