add table with results

--- a/academicArticle/paper.tex
+++ b/academicArticle/paper.tex
@@ -12,6 +12,10 @@
 \usepackage{amssymb}
 \interdisplaylinepenalty=2500
 
+% *** TABLE PACKAGES ***
+\usepackage{multirow}
+\usepackage[table]{xcolor}
+
 % *** SPECIALIZED LIST PACKAGES ***
 \usepackage{algorithmic}
 
