--- a/academicArticle/paper.tex
+++ b/academicArticle/paper.tex
@@ -15,6 +15,8 @@
 % *** TABLE PACKAGES ***
 \usepackage{multirow}
 \usepackage[table]{xcolor}
+%\usepackage{caption} 
+%\captionsetup[table]{skip=5pt}
 
 % *** SPECIALIZED LIST PACKAGES ***
 \usepackage{algorithmic}
