start working on conclusion, discussion almost finish, fix access date bibliography

--- a/academicArticle/other/bibliography.bib
+++ b/academicArticle/other/bibliography.bib
@@ -43,12 +43,11 @@
 	howpublished = {\url{https://pkg.go.dev/net/http#Serve}}
 }
 
-@MISC{Hodgson2020,
+@online{Hodgson2020,
 	author = {Matthew Hodgson},
 	title = {On privacy versus freedom},
-	month = {January},
-	year = {2020},
-	howpublished = {\url{https://matrix.org/blog/2020/01/02/on-privacy-versus-freedom}}
+	url = {https://matrix.org/blog/2020/01/02/on-privacy-versus-freedom},
+	note = {visited on 2022-06-27},
 }
 
 @MISC{Kennedy2018,
@@ -150,14 +149,6 @@
 	title = {{papayaChat}: a self-hosted {CLI} chat service for the cloud written in {C}},
 	year = {2022},
 	howpublished = {\url{https://github.com/erodrigufer/papayaChat}}
-}
-
-@book{Seacord2020,
-	author = {Seacord, Robert C.},
-	title = {Effective C: an introduction to professional C programming},
-	publisher = {No Starch Press},
-	address = {San Francisco},
-	year = {2020}
 }
 
 @inproceedings{Ajmani2016,
