--- a/academicArticle/other/bibliography.bib
+++ b/academicArticle/other/bibliography.bib
@@ -7,20 +7,22 @@
 	year = {2017}
 }
 
-@MISC{Edge2016,
+@online{Edge2016,
 	author = {Jack Edge},
 	title = {The perils of federated protocols},
 	month = {May},
 	year = {2016},
-	howpublished = {\url{https://lwn.net/Articles/687294/}}
+	url = {https://lwn.net/Articles/687294/},
+	note = {visited on 2022-06-27},
 }
 
-@MISC{Kaufman2016,
+@online{Kaufman2016,
 	author = {Brett Max Kaufman},
 	title = {New documents reveal government effort to impose secrecy on encryption company},
 	month = {October},
 	year = {2016},
-	howpublished = {\url{https://www.aclu.org/blog/national-security/secrecy/new-documents-reveal-government-effort-impose-secrecy-encryption}}
+	url = {https://www.aclu.org/blog/national-security/secrecy/new-documents-reveal-government-effort-impose-secrecy-encryption},
+	note = {visited on 2022-06-27},
 }
 
 @book{GoPL2015,
@@ -31,16 +33,11 @@
 	year = {2015}
 }
 
-@MISC{GoNet,
+@online{GoNet,
 	title = {Go's standard library's net package. {Listener type}},
 	year = {go1.18.3},
-	howpublished = {\url{https://pkg.go.dev/net#Listener}}
-}
-
-@MISC{GoHTTP,
-	title = {Go's standard library's net/http package. {Serve() function}},
-	year = {go1.18.3},
-	howpublished = {\url{https://pkg.go.dev/net/http#Serve}}
+	url = {https://pkg.go.dev/net#Listener},
+	note = {visited on 2022-06-27},
 }
 
 @online{Hodgson2020,
@@ -50,12 +47,13 @@
 	note = {visited on 2022-06-27},
 }
 
-@MISC{Kennedy2018,
+@online{Kennedy2018,
 	author = {William Kennedy},
 	title = {Scheduling in {Go}: {OS} Scheduler},
 	month = {August},
 	year = {2018},
-	howpublished = {\url{https://www.ardanlabs.com/blog/2018/08/scheduling-in-go-part1.html}}
+	url = {https://www.ardanlabs.com/blog/2018/08/scheduling-in-go-part1.html},
+	note = {visited on 2022-06-27},
 }
 
 @book{Kerrisk2010,
@@ -75,37 +73,41 @@
 	month = {March}
 }
 
-@MISC{Kumar2021,
+@online{Kumar2021,
 	author = {Rohan Kumar},
 	title = {{WhatsApp} and the domestication of users},
 	month = {January},
 	year = {2021},
-	howpublished = {\url{https://seirdy.one/2021/01/27/whatsapp-and-the-domestication-of-users.html}}
+	url = {https://seirdy.one/2021/01/27/whatsapp-and-the-domestication-of-users.html},
+	note = {visited on 2022-06-27},
 }
 
-@MISC{Morsing2013,
+@online{Morsing2013,
 	author = {Daniel Morsing},
 	title = {The {Go} scheduler},
 	month = {June},
 	year = {2013},
-	howpublished = {\url{https://morsmachine.dk/go-scheduler}}
+	url = {https://morsmachine.dk/go-scheduler},
+	note = {visited on 2022-06-27},
 }
 
-@MISC{Morsing2013_2,
+@online{Morsing2013_2,
 	author = {Daniel Morsing},
 	title = {The {Go} netpoller},
 	month = {September},
 	year = {2013},
-	howpublished = {\url{https://morsmachine.dk/netpoller}}
+	url = {https://morsmachine.dk/netpoller},
+	note = {visited on 2022-06-27},
 }
 
 
-@MISC{Siebenmann2019,
+@online{Siebenmann2019,
 	author = {Chris Siebenmann},
 	title = {The {Go}  runtime scheduler's clever way of dealing with system calls},
 	month = {December},
 	year = {2019},
-	howpublished = {\url{https://utcc.utoronto.ca/~cks/space/blog/programming/GoSchedulerAndSyscalls}}
+	url = {https://utcc.utoronto.ca/~cks/space/blog/programming/GoSchedulerAndSyscalls},
+	note = {visited on 2022-06-27},
 }
 
 @inproceedings{Pike2012,
@@ -113,7 +115,7 @@
 	title = {Go at {Google}},
 	year = {2012},
 	isbn = {9781450315630},
-	publisher = {Association for Computing Machinery},
+	publisher = {ACM},
 	address = {New York, NY, USA},
 	url = {https://doi.org/10.1145/2384716.2384720},
 	doi = {10.1145/2384716.2384720},
@@ -126,11 +128,12 @@
 	series = {SPLASH '12}
 }
 
-@MISC{Rodriguez2022,
+@online{Rodriguez2022,
 	author = {Eduardo {Rodriguez Fernandez}},
 	title = {{papayaChat}: a self-hosted {CLI} chat service for the cloud written in {C}},
 	year = {2022},
-	howpublished = {\url{https://github.com/erodrigufer/papayaChat}}
+	url = {https://github.com/erodrigufer/papayaChat},
+	note = {visited on 2022-06-27},
 }
 
 @inproceedings{Ajmani2016,
@@ -138,7 +141,7 @@
 	title = {Program your next server in {Go}},
 	year = {2016},
 	isbn = {9781450344647},
-	publisher = {Association for Computing Machinery},
+	publisher = {ACM},
 	address = {New York, NY, USA},
 	url = {https://doi.org/10.1145/2959689.2960078},
 	doi = {10.1145/2959689.2960078},
@@ -153,7 +156,7 @@
 	title = {A {Generation Lost in the Bazaar}: {Quality} happens only when someone is responsible for it.},
 	year = {2012},
 	issue_date = {August 2012},
-	publisher = {Association for Computing Machinery},
+	publisher = {ACM},
 	address = {New York, NY, USA},
 	volume = {10},
 	number = {8},
@@ -172,7 +175,7 @@
 	title = {The {Go} Programming Language and Environment},
 	year = {2022},
 	issue_date = {May 2022},
-	publisher = {Association for Computing Machinery},
+	publisher = {ACM},
 	address = {New York, NY, USA},
 	volume = {65},
 	number = {5},
@@ -191,7 +194,7 @@
 	title = {Social Media Mining: Prediction of Box Office Revenue},
 	year = {2017},
 	isbn = {9781450352208},
-	publisher = {Association for Computing Machinery},
+	publisher = {ACM},
 	address = {New York, NY, USA},
 	url = {https://doi.org/10.1145/3105831.3105854},
 	doi = {10.1145/3105831.3105854},
@@ -209,7 +212,7 @@
 	title = {Compiler Support for Lightweight Context Switching},
 	year = {2013},
 	issue_date = {January 2013},
-	publisher = {Association for Computing Machinery},
+	publisher = {ACM},
 	address = {New York, NY, USA},
 	volume = {9},
 	number = {4},
