--- a/academicArticle/paper.tex
+++ b/academicArticle/paper.tex
@@ -58,7 +58,7 @@
 \input{chapters/abstract}
 % Note that keywords are not normally used for peerreview papers.
 \begin{IEEEkeywords}
-concurrency, backend development, Go, C, software architecture, systems programming, instant messaging, software engineering
+concurrency, backend development, Go, C, instant messaging, software engineering
 \end{IEEEkeywords}
 \input{chapters/introduction}
 \input{chapters/soa}
