change title, add one bib source, change soa title

--- a/academicArticle/other/bibliography.bib
+++ b/academicArticle/other/bibliography.bib
@@ -242,3 +242,14 @@
 	location = {San Diego, CA, USA},
 	series = {PLDI 2022}
 }
+
+@inproceedings{2008Pekka,  
+	author={Jääskeläinen, Pekka and Kellomäki, Pertti and Takala, Jarmo and Kultala, Heikki and Lepistö, Mikael},  
+	booktitle={2008 IEEE/IFIP International Conference on Embedded and Ubiquitous Computing},   
+	title={Reducing Context Switch Overhead with Compiler-Assisted Threading},   
+	year={2008},  
+	volume={2},  
+	number={},  
+	pages={461-466},  
+	doi={10.1109/EUC.2008.181}
+}
