--- a/academicArticle/paper.tex
+++ b/academicArticle/paper.tex
@@ -42,7 +42,7 @@
 \begin{document}
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{An experimental comparison of the performance \\between different web concurrency paradigms}
+\title{An experimental comparison between the performance of different web concurrency paradigms}
 %\title{Exploring the low level design space \\of backend services}
 %\title{Exploring the design space of self-made back-end services: \\ Or how to lose your mental sanity with C}
 
